--- a/.github/workflows/test-build-deploy.yaml
+++ b/.github/workflows/test-build-deploy.yaml
@@ -25,3 +25,5 @@ jobs:
         node-version: ${{matrix.node-version}}
     - name: install dependencies
       run: npm ci
+    - name: run tests
+      run: npm run test
