--- a/.github/workflows/test-build-deploy.yaml
+++ b/.github/workflows/test-build-deploy.yaml
@@ -27,3 +27,5 @@ jobs:
       run: npm ci
     - name: run tests
       run: npm run test
+    - name: build application
+      run: npm run build --if-present
